--- a/Legal Opinion/main.tex
+++ b/Legal Opinion/main.tex
@@ -11,8 +11,8 @@
 \begin{document}
 
 \begin{letter}{\recipientName \\
-%\recipientTitle \\
-%\recipientOrg \\
+\recipientTitle \\
+\recipientOrg \\
 \recipientAddrLineOne \\
 \recipientAddrLineTwo}
 
