--- a/Legal Opinion/body.tex
+++ b/Legal Opinion/body.tex
@@ -18,24 +18,24 @@ Specify the date the mandate was agreed to.
 Note any important facts from your meeting minutes that don't appear in the documents.
 
 \section*{\textbf{\firstQuestion}}
-\textbf{Yes/No.} Summarizee the law in lay terms. 
+\textbf{Yes/No.} Summarize the law in lay terms. 
 
-Recall the pertinent facts. Apply these facts to the law. 
+Recall the relevant facts. Apply these facts to the law. 
 
 State any important recommendations. 
 
 \section*{\textbf{\secondQuestion}}
-\textbf{Yes/No.} Summarizee the law in lay terms. 
+\textbf{Yes/No.} Summarize the law in lay terms. 
 
-Recall the pertinent facts. Apply these facts to the law. 
+Recall the relevant facts. Apply these facts to the law. 
 
 State any important recommendations. 
 
 \section*{\textbf{In Conclusion:}}
-Restate your first conclusion, and reasons, here.
+Restate your first conclusion, and reasons therefor, here.
 
-Restate your second conclusion, and reasons, here.
+Restate your second conclusion, and reasons therefor, here.
 
-Recommend next steps. Specify their chances of success. If helpful, include an alternative.
+Recommend next steps. Specify their chances of success. If helpful, include an alternative or two.
 
 Offer to answer follow-up questions. State your availability.
